--- a/lm.css
+++ b/lm.css
@@ -109,7 +109,7 @@ body {
   font-size: 20pt;
   background: rgb(0, 40, 85); 
   /*background: rgb(128,0,0); */
-  /*url("images/dcpe.png") no-repeat right top;*/
+  url("images/us.png") no-repeat right top;
 }
 
 #container {
